# kernelcveanalysis

./: .gitignore  .gitmodules  Compiling_Custom_Kernel.md  Cuttlefish_with_gdb.md  EXPLOIT_DETAILS.md  README.md  create_db.py  update_dbs.sh  vulnerabilities_nopocs.db
android_bulletin_bugs/: FUTURE_SOURCES.md  README.md  android_advisories.db  framework_bugs.txt  pyproject.toml
android_bulletin_bugs/src/bug_tracker/: main.py
android_bulletin_bugs/src/bug_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
android_env/: .gitignore  Gemfile  README.md  allowed_syscalls_old.json  analyse_so_files.py  badnode_listen  badnode_reliable  badnode_reliable_expanded  darpa_cuttlefish_seccomp.json  dirtypipe  dirtypipe_expanded  process_so_libraries.txt  pyproject.toml  setup_forwarding.sh  shell.nix  system_server_permissions.txt  untrusted_app_system_server_diff.txt
android_env/codeql/: build_aosp_codeql.sh
android_env/codeql/test/: build.sh  qlpack.yml  query_test.ql  rebuild_db.sh  run_query.sh  test.java
android_env/selinux/: sepolicy
android_env/src/android_env/: adb.py  codeql.py  expand_binary.py  main.py  seccomp.py  selinux.py  syscalls.py  util.py
android_env/src/android_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
android_env/tools/: common.h  compile.sh  dump_seccomp_filter  dump_seccomp_filter.c  expand_binary  expand_binary.c  read_file  read_file.c
ingots_tools/: .gitignore  AGENTS.md  BUG.md  GEMINI.md  MANAGED_KEXPLOIT_SYSTEM.md  README.md  SYNTHESIS_TODO.md  badnode_context  bug_root_pathway_summary.md  output.txt  pyproject.toml  test.py
ingots_tools/android_app_mcp/: README.md  pyproject.toml
ingots_tools/android_app_mcp/assets/: README.md
ingots_tools/android_app_mcp/src/android_app_mcp/: adb_tools.py  cli.py  frida_support.py  server.py
ingots_tools/android_app_mcp/tests/: test_android_app_mcp.py
ingots_tools/android_env/: .gitignore  badnode  badnode_expanded  code  diff.txt  neil_cuttlefish_seccomp.json  policy  pyproject.toml  setup_forwarding.sh  shell.nix  system_server_permissions.txt  test_bpf  untrusted_app_permissions.txt
ingots_tools/android_env/.bundle/: config
ingots_tools/android_env/codeql/: build_aosp_codeql.sh  get_aidl_impl.ql  test.ql
ingots_tools/android_env/codeql/test/: output.bqrs  output.csv
ingots_tools/android_env/src/android_env/: codeql.py  seccomp.py  selinux.py
ingots_tools/android_env/src/android_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ingots_tools/cuttle_server/cuttle_cli/: README.md  pyproject.toml
ingots_tools/cuttle_server/cuttle_server/: README.md  pyproject.toml
ingots_tools/cuttle_server/cuttle_types/: README.md  pyproject.toml
ingots_tools/cuttleagent/: .gitignore  README.md  REPORT.md  likely_darpa_intended_bugs.txt  pyproject.toml  run_files.txt
ingots_tools/cuttleagent/app_findings/: REPORT.md
ingots_tools/exploit_adaptation/: pyproject.toml  test_synthesis_setup.sh
ingots_tools/kartifact/: README.md  SKILL.md  pyproject.toml
ingots_tools/kartifact/tests/: test_kartifact.py
ingots_tools/kdebug/: README.md  SKILL.md  pyproject.toml
ingots_tools/kdebug/assets/: README.md
ingots_tools/kdebug/src/kdebug/: __init__.py  (+6 more)
ingots_tools/kdebug/tests/: test_kdebug.py
ingots_tools/kexploit/: .gitignore  AGENTS.md  GEMINI.md  issue.txt  pyproject.toml
ingots_tools/kexploit_agent/: Dockerfile  README.md  build_docker.sh  pyproject.toml
ingots_tools/kexploit_agent/tests/: test_codex_agent.py  test_daemon_execution.py  test_log_viewer.py  test_logging.py  test_opencode_agent.py
ingots_tools/kexploit_utils/: README.md  pyproject.toml
ingots_tools/kexploit_utils/dockerfiles/: codex-sandbox.Dockerfile
ingots_tools/kexploit_utils/tests/: test_docker.py
ingots_tools/ksandbox/: .dockerignore  Dockerfile  README.md  pyproject.toml  tool-bundle.Dockerfile
ingots_tools/ksandbox/daemon/: Cargo.toml
ingots_tools/ksandbox/tests/: test_daemon_execution.py  test_docker_integration.py  test_persistence.py  test_provider.py  test_tool_bundle.py
ingots_tools/libadb/: README.md  pyproject.toml
ingots_tools/libadb/tests/: test_adb.py
ingots_tools/libadb/tools/: common.h  dump_seccomp_filter  expand_binary  read_file.c  runas  runas.c
ingots_tools/object_db/: .env  README.md  SKILL.md  pyproject.toml
ingots_tools/object_db/tests/: test_query_api.py
ingots_tools/primitives/: PRIMITIVES_TODO.md  README.md  pyproject.toml
ingots_tools/sandbox_env/: Dockerfile  README.md  pyproject.toml
ingots_tools/sandbox_env/template/: exploit.c
ingots_tools/scripts/: README.md  embed_binary_in_c.py  embed_binary_in_java.py  expand_binary.py  object_db_query.py  pyproject.toml
ingots_tools/scripts/scripts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ingots_tools/scripts/tests/: test_object_db_query.py
ingots_tools/skills/: README.md
ingots_tools/skills/add-exploit-primitive/: SKILL.md
ingots_tools/skills/cuttle-cli/: SKILL.md
ingots_tools/skills/object-db-query-api/: SKILL.md
ingots_tools/skills/running-log-checkpoints/: SKILL.md
ingots_tools/skills/testvm/: SKILL.md
ingots_tools/skills/wrap-common-exploit/: SKILL.md
syzploit/: .gitignore  Dockerfile  EXTENSION_ANDROID_APPS.md  EXTENSION_PROPOSALS.md  README.md  build_submodules  compile_arm64.sh  compile_x86_64.sh  env.example  pyproject.toml  run_cve_36971_v2.sh  run_exploit_queue.sh  set-env  show_plan.py
syzploit/badnode_cve-2023-20938/: README.md
syzploit/badnode_cve-2023-20938/src/: exploit.h  token_manager.h
syzploit/badnode_working/: Makefile  binder_client.c
syzploit/scripts/: cuttlefish_qemu.sh  deploy_cuttlefish.sh  gen_cuttlefish_scripts.sh
syzploit/src/syzploit/: __init__.py  __main__.py  main.py
syzploit/src/syzploit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
syzploit_old/: .gitignore  Dockerfile  build  docker-entrypoint.sh  pyproject.toml  set-env
syzploit_old/scripts/: gen_cuttlefish_scripts.sh  install_qemu_wrapper.sh
syzploit_old/src/syzploit/: __init__.py  data.py  main.py
(+1840 files in other folders)
