[project]
name = "android-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = true

[tool.mypy]
mypy_path = "src"

[project.scripts]
seccomp = "android_env.seccomp:dump_seccomp"
selinux = "android_env.selinux:dump_selinux"
