[project]
name = "android-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "exrex>=0.12.0",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[tool.uv]
package = true

[tool.mypy]
mypy_path = "src"

[project.scripts]
aenv = "android_env.main:main"
