[project]
name = "ingots-tools"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "android_env",
    "kexploit",
    "libadb",
    "scripts",
    "kexploit_agent",
    "kexploit_utils",
    "primitives",
]

[tool.uv.workspace]
members = [
  "android_env",
  "kexploit",
  "libadb",
  "scripts",
  "kexploit_agent",
  "kexploit_utils",
  "primitives",
]

[tool.uv.sources]
android_env = { workspace = true }
kexploit = { workspace = true }
libadb = { workspace = true }
scripts = { workspace = true }
kexploit_agent = { workspace = true }
kexploit_utils = { workspace = true }
primitives = { workspace = true }
