[project]
name = "ingots-tools"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "android_env",
    "android_app_mcp",
    "kexploit",
    "libadb",
    "scripts",
    "kexploit_agent",
    "kexploit_utils",
    "primitives",
    "object_db",
]

[tool.uv.workspace]
members = [
    "android_env",
    "android_app_mcp",
    "kexploit",
    "libadb",
    "scripts",
    "kexploit_agent",
    "kexploit_utils",
    "primitives",
    "object_db",
]

[tool.uv.sources]
android_env = { workspace = true }
android_app_mcp = { workspace = true }
kexploit = { workspace = true }
libadb = { workspace = true }
scripts = { workspace = true }
kexploit_agent = { workspace = true }
kexploit_utils = { workspace = true }
primitives = { workspace = true }
object_db = { workspace = true }
