[project]
name = "ingots-tools"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "android_env",
    "cuttleagent",
    "kexploit",
    "kdebug",
    "libadb",
    "scripts",
    "kexploit_agent",
    "kexploit_utils",
    "primitives",
    "object_db",
    "cuttle_server",
    "cuttle_cli",
    "cuttle_types",
]

[tool.uv.workspace]
members = [
    "android_env",
    "cuttleagent",
    "kexploit",
    "kdebug",
    "libadb",
    "scripts",
    "kexploit_agent",
    "kexploit_utils",
    "primitives",
    "object_db",
    "cuttle_server/cuttle_server",
    "cuttle_server/cuttle_cli",
    "cuttle_server/cuttle_types",
]

[tool.uv.sources]
android_env = { workspace = true }
cuttleagent = { workspace = true }
kexploit = { workspace = true }
kdebug = { workspace = true }
libadb = { workspace = true }
scripts = { workspace = true }
kexploit_agent = { workspace = true }
kexploit_utils = { workspace = true }
primitives = { workspace = true }
object_db = { workspace = true }

cuttle_server = { workspace = true }
cuttle_cli = { workspace = true }
cuttle_types = { workspace = true }
