[project]
name = "syzploit"
version = "0.2.0"
description = "Agentic kernel vulnerability analysis and exploit synthesis toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "androguard>=4.1.2",
    "beautifulsoup4>=4.13.0",
    "litellm>=1.80.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "vmlinux-to-elf>=1.1.0",
]

[project.optional-dependencies]
# Heavy deps only needed for specific features
android = [
    "androguard>=4.1.2",
    "frida-tools>=12.0.0",
]
full = [
    "androguard>=4.1.2",
    "capstone>=5.0.6",
    "frida-tools>=12.0.0",
    "keystone-engine>=0.9.2",
    "paramiko>=3.0.0",
    "pwntools>=4.14.1",
    "pyelftools>=0.32",
    "pyyaml>=6.0.2",
    "transformers>=4.40.0",
]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.uv]
package = true

[tool.mypy]
mypy_path = "src"
strict = true

[project.scripts]
syzploit = "syzploit.main:main"
