[project]
name = "syzploit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "capstone>=5.0.6",
    "keystone-engine>=0.9.2",
    "mypy>=1.16.1",
    "openai>=1.82.1",
    "pwntools>=4.14.1",
    "pycparser>=2.22",
    "pydantic>=2.11.5",
    "pyelftools>=0.32",
    "pyghidra>=2.1.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "openai>=2.6.1",
    "transformers>=4.57.1",
    "torch>=2.9.0",
    "dotenv>=0.9.9",
    "litellm>=1.80.9",
    "sockio>=0.15.0",
    "httpx>=0.28.1",
    "socksio>=1.0.0",
]

# kexploit integration is installed at runtime when ingots_tools is mounted.
# Inside Docker:  docker run -v /path/to/ingots_tools:/workspace/ingots_tools syzploit
# Outside Docker: cd ../ingots_tools && uv pip install -e kexploit -e kexploit_utils

[tool.uv]
package = true

[tool.mypy]
mypy_path = "src"

[project.scripts]
syzploit = "syzploit.main:main"
