[project]
name = "android-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "exrex>=0.12.0",
    "pyelftools>=0.32",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "libadb",
]

[tool.uv]
package = true

[tool.uv.sources]
libadb = { workspace = true }

[tool.mypy]
mypy_path = "src"

[project.scripts]
aenv = "android_env.main:main"
