[project]
name = "kdebug"
version = "0.1.0"
description = "Daemon-backed Frida CLI for Android app debugging over ADB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "frida>=16.0.0",
    "libadb",
    "pydantic>=2.11.0",
    "typer>=0.21.1",
]

[tool.uv]
package = true

[tool.uv.sources]
libadb = { workspace = true }

[project.scripts]
kdebug = "kdebug.main:main"
