[project]
name = "libadb"
version = "0.1.0"
description = "ADB utilities and tools for kernel exploitation research"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libadb"]
